# agentic-usage-bar-macos

./: README.md  index.html  package.json
SPECIFICATIONS/: _WORKFLOW.md
SPECIFICATIONS/IMPLEMENTED/: IMPLEMENTED_AGENTIC_USAGE_BAR_MACOS_20261207.md  IMPLEMENTED_CLAUDE_USAGE_MENUBAR_20262906.md
SPECIFICATIONS/NOT_YET_IMPLEMENTED/: CLAUDE_USAGE_MENUBAR_20262906.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  lib.rs  main.rs  tray.rs  usage.rs
src-tauri/src/providers/: claude.rs  codex.rs  mod.rs
