[package]
name = "agentic-usage-bar"
version = "0.1.0"
description = "macOS menubar app showing session & weekly usage for agentic coding tools (Claude Code, Codex)"
authors = ["Shiv"]
edition = "2021"

[lib]
name = "agentic_usage_bar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
